--- a/浏览器/事件循环.md
+++ b/浏览器/事件循环.md
@@ -59,6 +59,7 @@ void MainTherad(){
 11. 缺陷：
     - 延迟任务会在当前任务执行完之后去执行。当任务执行时间过久，会影响定时器执行。
     - 定时器嵌套调用，会设置最短间隔为4毫秒。 --- 实时性高的动画不适合定时器实现。
+      - requestAnimationFrame，会去根据系统刷新的节奏调用相应的任务，但也是需要在主线程任务执行后在去执行。
     - 未激活的页面，定时器最小间隔为1000毫秒。
     - 延迟时间有最大值，超过后立即执行。
     - this指向window
