XMLHttpRequest，宏任务，微任务

--- a/浏览器/事件循环.md
+++ b/浏览器/事件循环.md
@@ -8,7 +8,7 @@
     - 循环。线程语句最后新增一个for循环语句，且循环会一直执行。
     - 事件。如果其他线程插入，例如：用户输入。主线程会处于等待状态，执行结束后，线程会被激活。
 
-3. 但是，所有的任务都来自线程内部，另外线程想让主线程执行一个任务。如下图：主线程接收到IO线程的任务后，就需要对其进行处理。 --- 「消息队列」。
+3. 但是，所有的任务都来自线程内部，另外线程想让主线程执行一个任务。如下图：主线程通过IPC接收到IO线程的任务后，就需要对其进行处理。 --- 「消息队列」。
     - 同时多个线程操作同一个消息队列，在添加和取出任务时需要加上一个同步锁。
 
 ![](https://static001.geekbang.org/resource/image/2e/05/2eb6a8ecb7cb528da4663573d74eb305.png)
@@ -63,3 +63,42 @@ void MainTherad(){
     - 未激活的页面，定时器最小间隔为1000毫秒。
     - 延迟时间有最大值，超过后立即执行。
     - this指向window
+
+# XMLHTTPRequest
+
+- XMLHTTPRequest流程：
+
+  1. 新建XMLHTTPRequest对象。
+  2. 注册相关事件回调处理。
+  3. 初始化请求。
+  ```JS
+  xhr.open('Get', URL, true)
+   ```
+  4. 配置请求参数。
+  5. 发送请求。
+
+- 浏览器的角度看请求：浏览器通过XMLHTTPRequest发起请求，会交与网络进程这些其他进程去执行，然后执行结果在通过IPC方式通知渲染进程，之后渲染进程在将消息添加到消息队列中。
+![](https://static001.geekbang.org/resource/image/29/c6/2914a052f4f249a52077692a22ee5cc6.png)
+
+# 宏任务，微任务
+
+- 宏任务执行
+
+  - 先从多个消息队列中选出一个最老的任务
+  - 记录开始执行时间，将oldestTask设置为正在执行的任务
+  - 执行完后，删除该任务
+  - 统记执行完成的时长
+
+- 异步回调的形式
+  - 一种是将其做成一个任务放在「消息队列尾部」。定时器
+  - 一种是直接添加在「微任务尾部」。MutationObserver，Promise.resolve
+
+- 微任务的执行：
+  - 当前的宏任务的JS引擎快退出全局执行上下文并清空调用栈时，JS引擎会检查全局执行上下文中的微任务，然后按照顺序执行队列中的微任务。「检查点」
+  - 如果在执行微任务中产生了新的微任务，会推入到当前的微任务队列中，直到当前微任务队列执行完。
+  - 会延长宏任务的执行时间，宏任务执行时间 += 微任务执行时间
+
+- MutationObserver，采用「观察者模式」来监听DOM变化，属性的变化，节点的增减，内容的变化。会多次DOM变化后，「一次性」触发异步调用。
+
+- 通过异步解决同步操作的「性能问题」，微任务解决「实时性」问题。
+
