--- a/浏览器/事件循环.md
+++ b/浏览器/事件循环.md
@@ -1,4 +1,4 @@
-# 事件循环
+# 事件循环 （执行效率和实时性的权衡）
 
 ## 内部实现
 1. 主线程的任务会被按顺序依次执行，任务执行完后，线程会自动退出。
@@ -102,3 +102,10 @@ void MainTherad(){
 
 - 通过异步解决同步操作的「性能问题」，微任务解决「实时性」问题。
 
+# Promise
+
+- 目的：解决异步编程风格问题
+
+  - 代码逻辑不连续性。需要立即绑定回调函数，实现了对回调函数的延时绑定。
+  - 嵌套调用。then会去依据promise层级递归查找出promise的resolve，并依次传回最外层。reject同理。
+  - then的微任务机制。由于延迟绑定函数的原因，.then需要在立即执行函数之后调用。如果处理成宏任务的话，中间可能会有别的宏任务插入，保证不了实时性。
