协程与生成器

--- a/浏览器/事件循环.md
+++ b/浏览器/事件循环.md
@@ -109,3 +109,46 @@ void MainTherad(){
   - 代码逻辑不连续性。需要立即绑定回调函数，实现了对回调函数的延时绑定。
   - 嵌套调用。then会去依据promise层级递归查找出promise的resolve，并依次传回最外层。reject同理。
   - then的微任务机制。由于延迟绑定函数的原因，.then需要在立即执行函数之后调用。如果处理成宏任务的话，中间可能会有别的宏任务插入，保证不了实时性。
+
+# Generator 同步的方式编写代码
+
+- 生成器 vs 协程
+
+  - 一个线程可以存在多个协程，但是同时只能执行一个协程。如果A协程启动B协程，就称为B的父协程。
+  - 协程执行流程图：
+  ```JS
+  function* genDemo() {
+      console.log("开始执行第一段")
+      yield 'generator 2'
+
+      console.log("开始执行第二段")
+      yield 'generator 2'
+
+      console.log("开始执行第三段")
+      yield 'generator 2'
+
+      console.log("执行结束")
+      return 'generator 2'
+  }
+
+  console.log('main 0')
+  let gen = genDemo()
+  console.log(gen.next().value)
+  console.log('main 1')
+  console.log(gen.next().value)
+  console.log('main 2')
+  console.log(gen.next().value)
+  console.log('main 3')
+  console.log(gen.next().value)
+  console.log('main 4')
+  ```
+  ![](https://static001.geekbang.org/resource/image/5e/37/5ef98bd693bcd5645e83418b0856e437.png)
+
+  - 其是在主线程上交替执行的，gen协程调用yield方法时，JS引擎会保存gen的调用栈信息，恢复父协程的调用栈信息。反之亦然。
+
+  ![](https://static001.geekbang.org/resource/image/92/40/925f4a9a1c85374352ee93c5e3c41440.png)
+
+  ## async & await
+
+  - async 声明的函数，会「异步执行」和「隐式返回一个Promise」。
+  - await 会调用.then来包装相应的代码块。（需要等status为非PENDING，才执行）
