浏览器里看HTTP请求过程

--- a/浏览器/浏览器.md
+++ b/浏览器/浏览器.md
@@ -20,4 +20,63 @@
 - 插件进程
 
 <hr />
-#
+
+# 互联网是一套理念和协议组成的体系架构
+
+## 数据包如何送达主机？
+- IP寻址。在传输前会附上主机的IP地址，
+## 主机如何将数据包转交给应用？
+## 数据如何被完整地送达应用程序？ - 端口号
+- UDP「User Datagram Protocol」，用户数据包协议。速度快，不能保证数据的可靠性，数据丢失了不会重传。
+- TCP「Transmission Control Protocol」。面向链接的，可靠的，基于字节流的传输层通信协议。
+  - 建立链接阶段。三次握手，发送方和接收方都需要有一个确认的过程。
+  - 传输数据阶段。
+    - 在接收端接收到数据包后，需要发送确认数据包给发送端。如果一定时间内，发送端没有收到接收端返回的确认消息，视为数据包丢失，触发重发机制。
+    - 大文件被拆分为多个数据包后，接收端会按TCP头的序号进行排序，保证数据完整。
+  - 断开链接阶段。四次挥手。
+
+<hr />
+
+# HTTP请求
+![](https://static001.geekbang.org/resource/image/1b/6c/1b49976aca2c700883d48d927f48986c.png)
+
+## 1. 构建请求
+```
+GET /index.html HTTP1.1
+```
+## 2. 查找缓存
+- 如果发现请求的资源在浏览器缓存「本地」中未过期，会直接拦截请求，返回该资源。
+- 同时，还会有三级缓存，即memory cache，其中memory cache比disk cache快。
+- 如果不存在缓存或者缓存未命中。会进入网络请求过程。
+## 3. 准备IP地址和端口
+### 查找域名解析缓存，是否有解析过的域名，没有进行域名解析。
+
+- 通过URL获取IP和端口号。数据包都是通过IP传输给接收方的，我们需要对URL在「DNS（域名系统）」查找到映射的IP地址。
+- 同时，浏览器会对解析过的域名进行数据缓存，如果域名已经解析过了，会减少一次网络请求。
+- URL没有特别指明的情况下，默认为8080。
+
+## 4. 等待TCP队列
+- 浏览器中，同个域名下最多能建立6个TCP链接。
+
+## 5. 建立TCP链接
+
+- 在HTTP请求之前，即应用层之前，需要建立传输层协议（三次握手）。
+
+## 6. 发送HTTP请求
+- 如果用户登录了的情况，会在返回并保存在客户端cookie等信息。在下一次请求时自动带上cookie
+
+## 7. 是否有Keep-Alive
+- 一般服务器向客户端返回了数据后，就要关闭TCP链接，如果有Keep-Alive则会保持打开的状态。就可以省去重新建立TCP链接的时间。
+- 不同于HTTP2，keep是一个请求完再请求另一个，HTTP2可以并行请求。
+
+## 8. 是否有重定向
+- Location字段，说明URL需要重定向，需要重新进行导航。
+## 9. 断开链接
+
+<hr />
+
+## [浏览器缓存](./缓存策略.md)
+
+<hr />
+
+## [登录鉴权](./登录鉴权.md)
