输入URL到页面渲染（前）

--- a/浏览器/浏览器.md
+++ b/浏览器/浏览器.md
@@ -11,7 +11,7 @@
   - 一个进程关闭后，操作系统会回收进程中所有的内存。
   - 进程之间相互隔离。通讯通过IPC（InterProcess Communication）
 
-## 目前的浏览器架构：
+## 目前的浏览器架构：（沙盒，为了安全也为了不阻塞任务执行）
 ![](https://static001.geekbang.org/resource/image/b6/fc/b61cab529fa31301bde290813b4587fc.png)
 - 浏览器进程。界面显示，用户交互，子进程管理，存储。
 - 渲染进程。HTML,CSS,JS，转化为可交互的网页。其中有排版引擎Blink，JS的V8引擎。一般一个TAB就有一个渲染进程，运行在沙箱环境中。
