webpack热更新原理

--- a/webpack/基础篇.md
+++ b/webpack/基础篇.md
@@ -12,4 +12,28 @@
 - grunt。打包分成多个任务，每次打包完存入磁盘，涉及到许多IO操作
 - gulp。文件流，存入内存。解决了IO操作的问题。
 - webpack，rollup，parcel
-- 
+
+## loader
+- 处理不能解析的文件类型，css
+- css-loader。加载CSS，转换为commonJS对象。
+- style-loader。通过```<style>```标签插入到head里
+- raw-loader。文件内容以字符串形式注入
+- thread-loader。多线程
+
+## plugin
+- 增强webpack的功能，用于bundle文件的优化，资源的管理，环境注入。
+- extractTextWebpackPlugin，将css从bundle文件里提取处理成一个css文件。
+- uglifyjsWebpackPlugin，压缩JS
+- ZipWebpackPlugin，打包资源生成Zip包
+
+## 热更新原理
+- 概念：
+  - webpack compile：将JS编译成bundle
+  - Bundle server：提供文件在浏览器的访问
+  - HMR Server：将更新了的文件发送给HMR Runtime
+  - HMR Runtime：会注入到浏览器，监听文件的变化并更新
+### 流程：
+1. 启动时，webpack compile将JS转化为bundle，并传给Bundle server，确保文件能被访问到。
+2. 在文件更新时，会经过webpack compile编译成bundle完，发送给HMR server，HS会监听到哪些文件发生了改变。（源代码）
+3. 然后HS会通知客户端的HR，然后HR会进行更新代码。
+
