文件指纹缓存策略

--- a/webpack/基础篇.md
+++ b/webpack/基础篇.md
@@ -22,7 +22,7 @@
 
 ## plugin
 - 增强webpack的功能，用于bundle文件的优化，资源的管理，环境注入。
-- extractTextWebpackPlugin，将css从bundle文件里提取处理成一个css文件。
+- MiniCssExtractPlugin，将css从bundle文件里提取处理成一个css文件。
 - uglifyjsWebpackPlugin，压缩JS
 - ZipWebpackPlugin，打包资源生成Zip包
 
@@ -36,4 +36,15 @@
 1. 启动时，webpack compile将JS转化为bundle，并传给Bundle server，确保文件能被访问到。
 2. 在文件更新时，会经过webpack compile编译成bundle完，发送给HMR server，HS会监听到哪些文件发生了改变。（源代码）
 3. 然后HS会通知客户端的HR，然后HR会进行更新代码。
+
+## 文件指纹策略 - 版本管理，浏览器缓存。
+
+- hash：整个项目的构建相关，项目文件有修改则hash会跟着更改。跟着项目的compilation更改。
+  - compilation代表一次新的编译，只要文件改动，就会被重新创建。
+  - Compiler代表webpack从启动到关闭的生命周期。
+- chunkHash：和webpack打包的chunk（模块）有关，「不同的entry」会生成不同的chunkHash值。（JS文件）
+- contentHash：根据文件内容变更。（css文件）
+
+
+
 
