CSS阻塞DOM解析；defer，async

--- a/浏览器/脚本加载.md
+++ b/浏览器/脚本加载.md
@@ -1,9 +1,9 @@
 # script
 
 ## defer
-- 告诉浏览器不要等待脚本。脚本会在下载进程里下载，然后等DOM解析完成后，即DOMContentLoaded后再执行脚本。
+- 告诉浏览器不要等待脚本。脚本会在下载进程里下载，然后等DOM解析完成后，即DOMContentLoaded之前再执行脚本。
 - 能保证脚本的执行顺序。
-- 模块脚本总是被延迟的
+- 模块脚本总是被延迟的。
 
 ## async
 - 浏览器开始时会扫描整个HTML文件，如果遇到async会推到延迟队列中去进行异步加载。
