--- a/webpack/基础篇.md
+++ b/webpack/基础篇.md
@@ -45,6 +45,15 @@
 - chunkHash：和webpack打包的chunk（模块）有关，「不同的entry」会生成不同的chunkHash值。（JS文件）
 - contentHash：根据文件内容变更。（css文件）
 
+## 静态资源内联
+- css样式文件。
+  - 直接style-loader打入到head里，「减少http请求」。
+  - 针对chunk的css代码，html-inline-css-webpack-plugin，打包好的css代码插入到head里。
 
-
+## source map
+- 将打包出来的压缩代码，指到源代码的位置。实现：使用「eval」将源代码包裹住。
+- 类型：
+  - inline。不生成.map文件。将.map作为DataURL嵌入。
+  - cheap。不包含错误堆栈中的「列」信息。
+  - module。包含loader的sourceMap。
 
