webpack-共用资源分离

--- a/webpack/基础篇.md
+++ b/webpack/基础篇.md
@@ -49,6 +49,7 @@
 - css样式文件。
   - 直接style-loader打入到head里，「减少http请求」。
   - 针对chunk的css代码，html-inline-css-webpack-plugin，打包好的css代码插入到head里。
+- meta等。raw-loader。
 
 ## source map
 - 将打包出来的压缩代码，指到源代码的位置。实现：使用「eval」将源代码包裹住。
@@ -56,4 +57,7 @@
   - inline。不生成.map文件。将.map作为DataURL嵌入。
   - cheap。不包含错误堆栈中的「列」信息。
   - module。包含loader的sourceMap。
+
+## 页面共用资源分离
+- splitChunksPlugin。对公共脚本进行分离。并且可以指定范围，例如：该资源的最小共用次数minChunks，包最小大小minSize等。
 
