--- a/webpack/基础篇.md
+++ b/webpack/基础篇.md
@@ -61,3 +61,16 @@
 ## 页面共用资源分离
 - splitChunksPlugin。对公共脚本进行分离。并且可以指定范围，例如：该资源的最小共用次数minChunks，包最小大小minSize等。
 
+## tree shaking
+- 概念：一个模块可能会有多个方法，主要某个被用到了，整个模块都会被打到「bundle」里去。tree shaking就是将用到的方法打入bundle，没用到的在「uglify」阶段檫除掉。
+- 要求：必须是ES6语法。CJS方法（模块导入）不支持。
+
+- DCE（Elimination）代码中不会到达的代码。
+  - 不会执行的，不可到达。
+  - 执行的结果不会被用到。
+  - 代码中只写不读。
+
+- 原理：
+  - ES6模块静态导入。对导入的模块进行「静态分析」。
+  - 分析过程中，对没有到达的代码进行标记。
+  - 在uglify阶段删除无用代码。
