--- a/webpack/基础篇.md
+++ b/webpack/基础篇.md
@@ -74,3 +74,20 @@
   - ES6模块静态导入。对导入的模块进行「静态分析」。
   - 分析过程中，对没有到达的代码进行标记。
   - 在uglify阶段删除无用代码。
+
+
+## scope Hoisting - 作用域提升
+- webpack模块机制
+  - webpack打包模块时，会将模块带上一层包裹。
+  - import会被转化成_webpack_require，返回module.exports。
+  - 最后打包出来是一个匿名函数，通过「__webpack_require__(0)」启动。
+  ![](/image/ada29fefcc7e39a5f7a33bfa88cfcfc.png)
+
+- 存在问题：
+  - 大量函数闭包包裹代码，导致代码体积增大（模块越多越明显）。
+  - 运行代码时创建函数作用域变多，内存开销越大。
+
+- 原理：将所有模块的代码按照引用顺序放在一个函数作用域里，并会适当重命名一些变量解决冲突。
+  - 会把需要导入的文件放到导入者的顶部，例如：如果b依赖a，将a放在b的前面。
+  - 可以减少「函数声明」和「内存开销」。
+  - 必须是es6语法，CJS语法无效。
