代码分割，最后导入

--- a/webpack/基础篇.md
+++ b/webpack/基础篇.md
@@ -91,3 +91,9 @@
   - 会把需要导入的文件放到导入者的顶部，例如：如果b依赖a，将a放在b的前面。
   - 可以减少「函数声明」和「内存开销」。
   - 必须是es6语法，CJS语法无效。
+
+## 代码分割 - chunks
+- 适用的场景：
+  - 抽离相同的代码到一个共享块。
+  - 脚本懒加载，初始下载代码更小。
+- 之后通过ES6动态import「@babel/plugin-syntax-dynamic-import」，导入对应的模块。
