--- a/webpack/基础篇.md
+++ b/webpack/基础篇.md
@@ -97,3 +97,24 @@
   - 抽离相同的代码到一个共享块。
   - 脚本懒加载，初始下载代码更小。
 - 之后通过ES6动态import「@babel/plugin-syntax-dynamic-import」，导入对应的模块。
+
+## [eslint](./project/eslint.md)
+
+## webpack打包工具库
+- 特性：
+  - 打包了压缩版和非压缩版.
+  - 支持AMD / CJS / ESM模块导入。
+    - es module。「import * as X from 'xxx'」
+    - CJS。「require('xxx')」
+    - AMD。「require(['xxx'], function(xxx) { xxx.add() })」
+  - 上传到服务器。可以```<script>```导入。
+- 目录：
+  ![](/image/dbd724065a6a4c3617328dee9b5d0b0.png)
+- 步骤：
+1. 编写好代码。
+2. 配置好出口entry、output、针对prod环境配置min.js。
+3. package.json配置好main.js「入口文件」。
+4. 入口文件里配置prod导出min.js，dev导出源码。
+```JS
+module.exports = require('XXX')
+```
