--- a/webpack/基础篇.md
+++ b/webpack/基础篇.md
@@ -118,3 +118,16 @@
 ```JS
 module.exports = require('XXX')
 ```
+
+## webpack 打包SSR
+- 对JS等文件不必使用hash的命名进行缓存。通常一个HTML返回所有的数据，所以减少了请求数量，白屏时间会更快。有利于SEO。
+- 主要实现是将模板最后渲染为一个「字符串」，最后访问路由时返回对应的模板。
+- 存在的问题：
+  - 「浏览器的全局变量」，node上没有document，window。fetch，ajax才有的api。
+  - 需要用到CJS的模块化方式。
+  - Node没法解析css。通过ignore-loader忽略CSS的解析，或者通过css in js的形式。
+
+- 占位符：
+  - 在HTML添加占位符，将css通过读取文件，或者加载静态资源的方式加载。
+  - 首屏数据也同理。
+
