构建包涉及到的知识点

--- a/webpack/构建包.md
+++ b/webpack/构建包.md
@@ -10,3 +10,19 @@
 ### 构建是否成功
 - 将webpack配置传给「webpack函数」最后输出构建结果（是否失败）或者构建的时间等信息。
 - 判断构建出来是否有相应的文件（HTML,JS,CSS）
+
+## 单元测试
+
+## 测试覆盖率
+
+## CI 自动化执行项目构建
+
+## 语义化版本
+
+## semver规范
+- 解决的问题：
+  - 避免循环依赖
+  - 依赖冲突
+- 主版本号：当做了不兼容的API修改
+- 次版本号：做了向下兼容的功能性新增。feature
+- 修订号：做了向下问题的修正。bug
