--- a/webpack/基础篇.md
+++ b/webpack/基础篇.md
@@ -64,11 +64,12 @@
 ## tree shaking
 - 概念：一个模块可能会有多个方法，主要某个被用到了，整个模块都会被打到「bundle」里去。tree shaking就是将用到的方法打入bundle，没用到的在「uglify」阶段檫除掉。
 - 要求：必须是ES6语法。CJS方法（模块导入）不支持。
+- 擦除只擦除函数和变量，不擦除「类」。
 
-- DCE（Elimination）代码中不会到达的代码。
+- DCE「Dead Code Elimination」（Elimination）代码中不会到达的代码。
   - 不会执行的，不可到达。
   - 执行的结果不会被用到。
-  - 代码中只写不读。
+  - 代码只影响死变量，只写不读。
 
 - 原理：
   - ES6模块静态导入。对导入的模块进行「静态分析」。
