--- a/webpack/基础篇.md
+++ b/webpack/基础篇.md
@@ -76,6 +76,10 @@
   - 分析过程中，对没有到达的代码进行标记。
   - 在uglify阶段删除无用代码。
 
+- uglify原理：（2.x需要转成es5才能进行压缩）
+  - 将代码解析成AST。
+  - 转化为一颗更小的AST。
+  - 在输出代码。
 
 ## scope Hoisting - 作用域提升
 - webpack模块机制
