--- a/深入浅出vue/模板编译.md
+++ b/深入浅出vue/模板编译.md
@@ -14,3 +14,28 @@
 const code = with(this){ return 'Jarar' }
 new Function(code)
 ```
+
+# 解析器
+## 内部原理
+- 分了HTML解析器，文本解析器，过滤器解析器。
+
+## HTML解析器
+- 在解析过程中，不断触发start，end，chars，comment钩子。
+- 钩子函数接收三个参数，分别是：tag，attrs，unary（是否闭合）。
+- 用栈进行维护。取出父级。
+
+## 流程
+- 模板是以一小段一小段截取并解析的，需要通过一个循环进行截取直到结束。
+1. 先判断是否是正常元素的逻辑。如果是正常元素则继续，如果是script，style，textarea需要按文本形式截取并触发「chars钩子」。如果是正常元素继续。
+2. 解析是开始标签，结束标签，或者是文本。可能出现的清空如下：
+  - 文本。唯一一个不是「<」开头的。
+  - 注释。
+  - 条件注释。
+  - DOCTYPE.
+  - 结束标签。
+  - 开始标签。
+3. 按照不同的类型进行处理。
+
+## 文本解析器
+- 带文本的变量需要将变量替换成变量的值，在文本解析器中，构建一个带变量的文本类型到AST，并添加到父节点children中。（调用toString方法）。
+- 最终AST转化成代码字符串并「放在with中执行」。
