--- a/深入浅出vue/模板编译.md
+++ b/深入浅出vue/模板编译.md
@@ -39,3 +39,15 @@ new Function(code)
 ## 文本解析器
 - 带文本的变量需要将变量替换成变量的值，在文本解析器中，构建一个带变量的文本类型到AST，并添加到父节点children中。（调用toString方法）。
 - 最终AST转化成代码字符串并「放在with中执行」。
+
+# 优化器
+- 在AST中找出静态子节点并打赏标记static，staticRoot。
+- 在重新渲染时，不会生产新的子节点树，而是克隆已存在的静态子树。
+
+## 作用
+- 每次重新渲染时，不需要为静态子树创建节点；
+- 不需要在虚拟DOM中打补丁。
+
+## 流程：
+- 递归的先判断根节点是否是静态根节点，再用相同的方式处理子节点。
+- 如果遇到根节点下没有或者只有一个文本节点，不会将他标记为静态根节点。
