模板编译完结 - 代码生成器

--- a/深入浅出vue/模板编译.md
+++ b/深入浅出vue/模板编译.md
@@ -51,3 +51,9 @@ new Function(code)
 ## 流程：
 - 递归的先判断根节点是否是静态根节点，再用相同的方式处理子节点。
 - 如果遇到根节点下没有或者只有一个文本节点，不会将他标记为静态根节点。
+
+# 代码生成器
+- 其实就是字符串的拼接过程。
+- 递归的遍历AST生成字符串，最先生成根节点，再是子节点。
+- 分别有元素节点_c，文本节点_v，注释节点_e。
+- 最后将字符串拼接好在「with」中返回给调用者。
