--- a/深入浅出vue/生命周期.md
+++ b/深入浅出vue/生命周期.md
@@ -19,4 +19,67 @@
 - 实例将自身从父组件删除。取消实例上所有依赖的追踪并且移除所有事件监听。
 
 # 源码角度理解生命周期
-- 
+
+## new Vue()
+1. 通过initMixin方法将_init挂载到Vue构造函数的原型上。（同实例方法挂载方法）
+2. _init内部原理
+  ```JS
+  Vue.prototype._init = function(options) {
+    vm.$options = mergeOptions(
+      resolveConstructorOptions(vm.constructor)
+      options || {},
+      vm
+    )
+
+    initLifecycle(vm)
+    initEvents(vm)
+    initRender(vm)
+    callHook(vm, 'beforeCreate')
+    initInjections(vm)
+    initState(vm) // props,methods,data,computed,watch
+    initProvide(vm)
+    callHook(vm, 'created')
+
+    if (vm.$options.el) {
+      vm.$mount(vm.$options.el) // 如果没有el元素需要用户手动挂载
+    }
+  }
+  ```
+3. callHook函数
+  - vue构造函数，通过options参数得到用户设置的生命周期钩子。
+  - 会合并在options过程中找出options中所有key是钩子函数的名字，并转化为数据。（多个同名钩子合并成一个）
+  - 遍历列表调用函数。
+  - try...catch捕获钩子函数发生的错误。并会在handleError处理完一次执行父组件的errorCaptured钩子，和全局config.errorHandler
+
+## errorCaptured和错误处理
+- 接收三个参数：错误对象，组件，来源信息。
+- 返回false会阻止错误向上传播。
+- 传播规则：
+  - 全局config.errorHandler定义，都会发送到这。
+  - 子组件handleError，会触发其父级从属链路中的多个errorCaptured钩子。会被多个错误逐个唤起。
+  - errorCaptured抛出个错误，会和原本捕获的错误发送到全局。
+  - false会阻止事件传播。
+
+## 初始化实例属性
+- 在「initLifecycle」中接受的VM实例，直接将属性挂载到vm上，例如：$parent，$root，$children等。
+- 特别提到$root，表示当前组件的根实例，如果没有父组件，就是它自己。直接子组件的root还是父组件自身。孙组件直接沿用子组件中的$root。
+
+## 初始化事件
+- 父组件在模板中使用v-on注册的事件，添加到子组件的事件系统。
+- 只有是组件标签，才会注册到子组件的事件系统中。如果是平台标签，会注册到浏览器事件中。
+- 组件的事件系统，保存在vm._events中，在模版编译时，会保存在vm.$options._parentListeners中。
+- 实现：
+  - updateComponentListeners，将所有事件注册到this._event。同时，有add和remove两个方法来注册和卸载事件。
+  - 如果事件名都存在，则替换成新的回调。
+- normalizeEvent，将事件修饰符。
+
+## 初始化inject
+- 所有子代注入依赖。
+- inject的值可以被data，props之中用到，所以在data/props之前初始化。
+- 实现：
+  - 获取用户配置的inject，保存到result中。
+  - 标识不转化为响应式。
+  - resolveInject，为了获得注入的内容。inject配置的key从当前组件读取内容，读取不到则读取他的父组件。父组件的实例中有_provide属性。
+  - 同时支持Symbol，用Reflect.ownKeys（不获取不可枚举的属性）读取inject所有的key，如果不支持symbol则用Object.key，同时必须filter不可枚举的属性。
+  - 同时处理options为函数，默认值的情况，分别时执行还有当source = false时，赋默认值。
+- 如果inject是个数组？vue实例化时会将数据进行标准化，也就是会转化为Object的形式。
