自定义指令原理

--- a/深入浅出vue/生命周期.md
+++ b/深入浅出vue/生命周期.md
@@ -67,7 +67,7 @@
 ## 初始化事件
 - 父组件在模板中使用v-on注册的事件，添加到子组件的事件系统。
 - 只有是组件标签，才会注册到子组件的事件系统中。如果是平台标签，会注册到浏览器事件中。
-- 组件的事件系统，保存在vm._events中，在模版编译时，会保存在vm.$options._parentListeners中。
+- 组件的事件系统，保存在vm._events中，在模版编译时，会保存在vm.$options._parentListeners中。通过子组件的$emit触发事件。
 - 实现：
   - updateComponentListeners，将所有事件注册到this._event。同时，有add和remove两个方法来注册和卸载事件。
   - 如果事件名都存在，则替换成新的回调。
