--- a/深入浅出vue/整体架构.md
+++ b/深入浅出vue/整体架构.md
@@ -1,6 +1,6 @@
 # 架构设计和项目结构
 
-## 打包结果
+## 打包结果 - webpack loader
 - 运行时 + 编译器。（完整版）
 - 运行时。vue-loader或者vueify，*.vue文件会将模板编译成JS，因此最终打包的文件并不需要编译器。只需引入运行时版本即可。
 
