--- a/深入浅出vue/模板编译.md
+++ b/深入浅出vue/模板编译.md
@@ -15,7 +15,7 @@ const code = with(this){ return 'Jarar' }
 new Function(code)
 ```
 
-# 解析器
+# 解析器 - 类似浏览器HTML解析（Vue多出了个触发钩子，浏览器会判断是否是安全的HTML tag）
 ## 内部原理
 - 分了HTML解析器，文本解析器，过滤器解析器。
 
@@ -36,11 +36,11 @@ new Function(code)
   - 开始标签。
 3. 按照不同的类型进行处理。
 
-## 文本解析器
+## 文本解析器 - webpack require
 - 带文本的变量需要将变量替换成变量的值，在文本解析器中，构建一个带变量的文本类型到AST，并添加到父节点children中。（调用toString方法）。
 - 最终AST转化成代码字符串并「放在with中执行」。
 
-# 优化器
+# 优化器 - patch静态节点
 - 在AST中找出静态子节点并打赏标记static，staticRoot。
 - 在重新渲染时，不会生产新的子节点树，而是克隆已存在的静态子树。
 
