--- a/浏览器/事件循环.md
+++ b/浏览器/事件循环.md
@@ -4,7 +4,7 @@
 1. 主线程的任务会被按顺序依次执行，任务执行完后，线程会自动退出。
 
 2. 想要线程运行过程中，「接受新的任务」。采用了事件循环机制。
-  
+
     - 循环。线程语句最后新增一个for循环语句，且循环会一直执行。
     - 事件。如果其他线程插入，例如：用户输入。主线程会处于等待状态，执行结束后，线程会被激活。
 
@@ -49,12 +49,12 @@ void MainTherad(){
     ProcessDelayTask()
 
     if(!keep_running) //如果设置了退出标志，那么直接退出线程循环
-        break; 
+        break;
   }
 }
 ```
 
-10. 清除定时器时，传入定时器的ID可以直接在延迟hash表中将其删除。
+10. 清除定时器时，传入定时器的ID可以直接在延迟hash表中将其删除。 - Vue watcher ID
 
 11. 缺陷：
     - 延迟任务会在当前任务执行完之后去执行。当任务执行时间过久，会影响定时器执行。
