一些md风格调整；readme；理解补充

--- a/JS/编译器和解释器.md
+++ b/JS/编译器和解释器.md
@@ -9,7 +9,7 @@
 1. 生成抽象语法树（AST）和执行上下文
   - 关于AST
     - 词法分析
-    - 语法分析（解析）- 变量提升发生在这个阶段
+    - 语法分析（解析）- 变量提升，执行上下文生成
 
 2. 生成字节码
   - 介于AST和机器码之间的语言，需要通过解释器转化为机器码才能执行。
