--- a/性能优化/系统地优化页面性能.md
+++ b/性能优化/系统地优化页面性能.md
@@ -1,17 +1,15 @@
-# 系统地优化页面性能 - 让页面更快地响应和显示
+#  加载阶段，交互阶段，关闭阶段
 
-###  加载阶段，交互阶段，关闭阶段
-
-## 加载阶段 - 发出请求到完整地页面渲染阶段。
+# 加载阶段 - 发出请求到完整地页面渲染阶段。
 - 加载阶段渲染流水线
 ![](https://static001.geekbang.org/resource/image/5d/7b/5d8716586b5f4d719097dca881007a7b.jpg)
 - 可见，JS，HTML资源，CSS文件会阻塞首次渲染，称之为「关键资源」。而图片，视频，音频则不会。
 
-### 优化思路：
+## 优化思路：
 - 关键资源个数。
   - JS，css改为内联形式。
   - 没有操作DOM或者CSSOM的设置为defer或者async。
-  - CSS添加媒体取消阻止显现的标识。```media="(min-width: 40em)"```
+  - CSS添加媒体取消阻止显现的标识。`media="(min-width: 40em)"`
   ![](https://developers.google.com/web/fundamentals/performance/critical-rendering-path/images/nytimes-nocss-device.png?hl=zh-cn)
 - 关键资源大小。
   - 通过压缩JS，css资源。移除注释。
@@ -19,11 +17,11 @@
   - 通常一个HTTP数据包为「14KB」。
   - 用CDN减少每次RTT时长。
 
-## 交互阶段 - 提高渲染进程渲染帧的速度
+# 交互阶段 - 提高渲染进程渲染帧的速度
 - 交互阶段的渲染流水线
 ![](https://static001.geekbang.org/resource/image/4a/0c/4a942e53f9358c9c4634c310335cc10c.png)
 
-### 优化思路
+## 优化思路
 - 减少重排，重绘。
 - 减少JS脚本霸占主线程太多时间。
   - 分为多个任务，执行时间不要太久。
@@ -31,4 +29,4 @@
 - 避免强制同步布局。在DOM操作之后，如果获取高度相关的数据，浏览器就需要去重新执行布局。
 - 避免在一次JS执行中，多次修改DOM。
 - 利用CSS合成动画。利用好will-change设置为单独一个图层。
-- 避免频繁的垃圾回收。不频繁创建临时变量。
+- 避免频繁的垃圾回收，不频繁创建临时变量。
