--- a/浏览器/事件循环.md
+++ b/浏览器/事件循环.md
@@ -1,7 +1,7 @@
 # 事件循环 （执行效率和实时性的权衡）
 
 ## 内部实现
-1. 主线程的任务会被按顺序依次执行，任务执行完后，线程会自动退出。
+1. 「渲染进程里的主线程」的任务会被按顺序依次执行，任务执行完后，线程会自动退出。
 
 2. 想要线程运行过程中，「接受新的任务」。采用了事件循环机制。
 
