--- a/浏览器/跨页面通信.md
+++ b/浏览器/跨页面通信.md
@@ -50,5 +50,5 @@ window.addEventListener('storage', function (e) {
 ## 不同源下页面通讯
 
 ## iframe
-- 原因：iframe与父页面可以通过origin来忽略同源限制。在每个需要同步数据的页面新建一个iframe。
+- 原因：iframe与父页面可以通过「origin」来忽略同源限制。在每个需要同步数据的页面新建一个iframe。
 - 通过「发送消息」 -> 「iframe接受」 -> 同步数据。
