--- a/浏览器安全/浏览器系统安全.md
+++ b/浏览器安全/浏览器系统安全.md
@@ -26,7 +26,7 @@
 - 一旦浏览器中某个进程中出现了异常，例如：页面卡死，浏览器奔溃，都可能影响到操作系统安全。
 
 ## 安全视角下的多进程架构
-- 现在chrome浏览器被划分为两大块，「浏览器主进程」和「渲染进程」。
+- 现在chrome浏览器被划分为两大块，「浏览器内核」和「渲染进程」。
 - 之间的通信通过IPC来完成。
 - 所有的网络进程，资源下载，都是通过「浏览器内核」进行下载，再通过IPC传输给渲染进程进行渲染流水线操作，最后生成一副图画。再将这图片传输给「浏览器内核模块」，然后再进行图片展示。
 ![](https://static001.geekbang.org/resource/image/b8/b1/b83693a1ace43f43f9cab242982de6b1.png)
