--- a/性能优化/图片处理.md
+++ b/性能优化/图片处理.md
@@ -1,18 +1,16 @@
-# 图片处理
+# 多图下的并发处理
 
-## 多图下的并发处理
-
-- http1.1下的图片并发，同一域名下只能同时请求6个，设置优先加载的图片。通过先设置的div计算到图片是否在视口区域内。
+- http1.1下的图片并发，没有多路复用，同一域名下只能同时请求6个，设置优先加载的图片。通过先设置的div计算到图片是否在视口区域内。
 - 同时，设置HTTP2.0。
 
-## 图片大小
+# 图片大小
 
-- 假如一张100px*100px的图，该图包含100*100px的「像素点」。
-- 每个像素点都是通过RGBA色道进行存储。
-- 每个色道都有0~255个取值。
-- 色道2^8 = 256，8位为1b，每个像素为4个色道，所以一个像素点需要4b，所以整张图需要10000*4b = 39kb
+- 假如一张`100px*100px`的图，该图包含`100*100px`的「像素点」。
+- 每个像素点都是通过`RGBA`色道进行存储。
+- 每个色道都有`0~255`个取值。
+- 色道`2^8 = 256`，8位为1b，每个像素为4个色道，所以一个像素点需要4b，所以整张图需要10000*4b = 39kb
 
-### 优化方向：
+## 优化方向：
 - 减少单位像素的字节数。
   - 有损无损压缩，有损通过删除一些像素数据；无损，通过一些算法，存储相近色值像素点的差值，「在像素点不变的下」减少存储体积。但会增加压缩的时间。
   - 满足需求的情况下使用最小的图片格式，使用webp，还支持动画和透明，gif更改为MP4。
