--- a/webpack/基础篇.md
+++ b/webpack/基础篇.md
@@ -17,7 +17,7 @@
 ## loader
 - 处理不能解析的文件类型，css
 - css-loader。加载CSS，转换为commonJS对象。
-- style-loader。通过```<style>```标签插入到head里
+- style-loader。通过`<style>`标签插入到head里
 - raw-loader。文件内容以字符串形式注入
 - thread-loader。多线程
 
