--- a/webpack/进阶篇.md
+++ b/webpack/进阶篇.md
@@ -67,7 +67,7 @@
     - es module。「import * as X from 'xxx'」
     - CJS。「require('xxx')」
     - AMD。「require(['xxx'], function(xxx) { xxx.add() })」
-  - 上传到服务器。可以```<script>```导入。
+  - 上传到服务器。可以`<script>`导入。
 - 目录：
   ![](/image/dbd724065a6a4c3617328dee9b5d0b0.png)
 - 步骤：
