--- a/深入浅出vue/模板编译.md
+++ b/深入浅出vue/模板编译.md
@@ -7,7 +7,7 @@
 - 遍历AST标记静态节点。
 - 使用AST生成渲染函数。
 ## 对应着三大块内容：
-- 解析器。过滤器解析器，文本解析器（解析例如：```Hello {{name}}```），HTML解析器（在其结束解析一个标签时，都会触发「钩子」，然后将相关信息传出「生成一个对应的AST」）。
+- 解析器。过滤器解析器，文本解析器（解析例如：`Hello {{name}}`），HTML解析器（在其结束解析一个标签时，都会触发「钩子」，然后将相关信息传出「生成一个对应的AST」）。
 - 优化器。遍历AST,检测出静态子树，然后打tag。
 - 代码生成器。将AST转化成渲染函数。
 ```JS
