--- a/JS/模块化.md
+++ b/JS/模块化.md
@@ -1,5 +1,8 @@
-# 1. 演变过程
+# 模块化
+- node诞生之后，出现了多种复杂场景，为了提高代码复用率。
+- 只有导出的变量才能被外部使用，不影响外部的作用域。
 
+# 演变过程
 ## 1. 全局function。
 - 将不同功能封装成不同的全局函数。
 - 问题：命名污染，数据不安全，模块成员看不出直接关系。
