二维数据结构 - 树，二叉搜索树

--- a/算法/一维数据结构.md
+++ b/算法/一维数据结构.md
@@ -7,7 +7,7 @@
 # 链表
 
 - 删除和插入操作时，将指针指向下一个值，插入为O(1)。
-- 当访问数据中的任意数据时，为O(n)。
+- 当访问数据中的任意数据时，为「O(n)」。
 
 # 跳表 - redis
 - 不只有一个指针，可以有多个指针，指向不同的位置。O(log n)
@@ -22,9 +22,20 @@
 
 # 双端队列 - deque
 - stack + queue。可以在首部或者尾部添加或者删除元素。
+- 有一个指针指向前一个指针。
 
 # 优先队列 （priority queue）
 
 - 插入操作：O(1)
 - 取出操作：O(logN) - 按元素优先级取出
 - 实现：实现较为复杂多样：heap（二叉树堆，fibonacci堆。。。）、BST（binary search tree）、treap
+
+# 哈希表
+
+- 散列表，映射函数（哈希函数）映射到表中一个位置来访问记录。
+- 查询，添加，删除时间复杂度O(1).
+
+- 数据越分散越好。如果表映射到一个地方时即为 - 哈希碰撞。
+- 如果映射到同个位置，拉出一个链表进行存储多个值。如果多个查询时间复杂度会退化成O(n)
+
+- treeMap, treeSet实现的哈希表，时间复杂度能降为O(log n)
