--- a/JS/模块化.md
+++ b/JS/模块化.md
@@ -104,6 +104,17 @@ export default value
 // 导入
 import { value } from './module1.js'
 ```
-- 与commonJS的差异：
-  - 输出的是值的引用。ESM是动态引用，不会缓存值，模块里变量绑定其所在的模块。
-  - CJS在运行时加载，ESM在编译时输出，是对外接口的一种静态定义，在代码静态解析阶段就会生成。
+
+# ESM与commonJS的差异：
+## ESM：输出的是值的动态引用，不会执行模块，「只有在需要用到时才到模块里取值」。
+  - 不会缓存值
+  - 模块里变量绑定所在的模块
+  - 在代码静态解析阶段就会生成
+## CJS：是在「加载时执行」。
+  - 可以缓存值，修改值
+  - 输出的是模块的运行结果
+
+## 对于循环依赖
+- CJS， 一旦出现了某个模块被循环加载，「只输出已经执行的部分，未执行的部分不会输出」
+- ESM， 不需要关心是否发生循环依赖，只是生成一个指向被加载模块的引用。「需要开发者保证取值时能取到值」
+
