--- a/算法/算法.md
+++ b/算法/算法.md
@@ -9,3 +9,15 @@
 # 计算机操作
 - if else, for, recursion
 - 找最近 重复子问题
+
+# 贪心 - 最优
+- 每一步都选择当前状态下最好最优，导致某些情况下全局最好或者最优。
+- 高效。但由于局限性，一般不能用来得到所需要的答案。可以用来解决一些要求不是很明确的问题。
+
+## 与动态规划不同：
+- 贪心会对于每个子问题都做出选择，不能回退（回溯）。
+- 动态规划会保存以前的运算结果，根据以前结果进行选择，有回退功能。（最优判断 + 回退）
+
+## 适用的场景
+1. 问题能分为多个子问题来解决。
+2. 子问题的最优解能递推到最终问题的最优解。（最优子结构）
