动态规划，分治补充

--- a/算法/算法.md
+++ b/算法/算法.md
@@ -28,3 +28,12 @@
 - 目标函数的单调性（单调递增或递减）
 - 存在上下界
 - 能通过索引访问
+
+# 动态规划（dynamic programming） - 求最优解
+
+## 定义：
+- 复杂的问题定义可以分解成多个简单的子问题，从而找到最优解。（通过递归的方式）
+- 重点：分治 + 最优子结构
+
+## 和分治的区别
+- DP找的是最优解「存储于缓存里」，中途淘汰掉次优解。
