--- a/深入浅出vue/生命周期.md
+++ b/深入浅出vue/生命周期.md
@@ -105,7 +105,7 @@ export function initState(vm) {
 }
 ```
   ## 1. 初始化props
-  - 父组件提供数据，通过props选择字节需要哪些内容，通过子组件选项筛选出来后添加到子组件上下文中。
+  - 父组件提供数据，通过props选择子组件需要哪些内容，通过子组件选项筛选出来后添加到子组件上下文中。
   - PS：在渲染函数执行中，如果节点是组件节点，会在DOM渲染过程中，将「子组件实例化」，会将模板解析的标签属性解析出的数据当作参数传递给子组件。
   - 实现：
     1. 规格化props。名称驼峰化，数组规格化为对象。
