动态规划小结

--- a/算法/算法.md
+++ b/算法/算法.md
@@ -45,3 +45,10 @@
   - fib: opt[i] = opt[n - 1] + opt[n - 2]
   - 二维路径：opt[i, j] = opt[i + 1][j] + opt[i][j + 1] // 同时需要判定a[i, j]是否为特殊情况
 
+## 步骤
+- 复杂问题转化为一个简单的子问题
+- 猜递推方程
+- 合并子问题的解merge
+- 递推，记忆化（建立状态表）自底向上递推
+- 解决
+
