复习分治，回溯

--- a/算法/算法.md
+++ b/算法/算法.md
@@ -6,6 +6,11 @@
 - 找重复子问题
 - 数学归纳法, 当最简单的N成立,证明N + 1也成立,所以之后的结果也成立.
 
+# 回溯
+- 仍旧用递归的方法实现，反复重复之前步骤可能出现的两种情况：
+  - 找到一个可能存在的正确答案。
+  - 尝试了所有方法，最后宣告没有答案。
+
 # 计算机操作
 - if else, for, recursion
 - 找最近 重复子问题
