浏览器缓存

--- a/浏览器/缓存策略.md
+++ b/浏览器/缓存策略.md
@@ -27,8 +27,10 @@
   - 其中Etag / If-None-Match的优先级比Last-Modified / If-Modified-Since高。
 
 ## 三级缓存
-- memory cache。内存缓存。随进程关闭则清除
+- memory cache。内存缓存。刷新Tab时命中有效，随进程关闭则清除。
 - disk cache。硬盘缓存。读取时需要IO操作，
+- 以上都是缓存请求返回的结果和缓存标识。
+
 - 浏览器中，JS和图片加载解析完会存入内存缓存中，而「css会被存到硬盘缓存中」。所以每一次都需要到disk cache取。
 ## 总结
 
@@ -37,3 +39,4 @@
 - 强缓存优先于协商缓存。
 - 强缓存生效时立即使用。不生效走协商缓存。
 - 协商缓存中，服务器返回304，缓存命中。200则缓存失效，并将结果存入浏览器缓存。
+- 对于频繁变动的资源采用协商缓存的形式，使每次都请求服务器确认；对于不常变化的资源，设置标识 - 强缓存（当变化时名字加上hash）。
