--- a/算法/算法.md
+++ b/算法/算法.md
@@ -44,9 +44,9 @@
 - DP找的是最优解「存储于缓存里」，中途淘汰掉次优解。
 
 ## 关键点 - 思路
-1. 最优子结构：opt[n] = best_of(opt[n-1], opt[n-2], ...)
-2. 存储中间状态：opt[i] ⭐
-3. 递推公式：状态转移方程，DP方程
+1. 分治：最优子结构：opt[n] = best_of(opt[n-1], opt[n-2], ...)
+2. 状态数组定义：存储中间状态：opt[i] ⭐
+3. DP方程：递推公式：状态转移方程，DP方程
   - fib: opt[i] = opt[n - 1] + opt[n - 2]
   - 二维路径：opt[i, j] = opt[i + 1][j] + opt[i][j + 1] // 同时需要判定a[i, j]是否为特殊情况
 
