相关笔记补充

--- a/浏览器/资源请求-渲染流水线前段.md
+++ b/浏览器/资源请求-渲染流水线前段.md
@@ -30,6 +30,7 @@ GET /index.html HTTP1.1
 
 - 通过URL获取IP和端口号。数据包都是通过IP传输给接收方的，我们需要对URL在「DNS（域名系统）」查找到映射的IP地址。
 - 同时，浏览器会对解析过的域名进行数据缓存，如果域名已经解析过了，会减少一次网络请求。
+  - DNS域名解析：浏览器自身 -> 操作系统host -> 本地DNS服务器 -> 根服务器
 - URL没有特别指明的情况下，默认为8080。
 
 ## 4. 等待TCP队列
