--- a/webpack/进阶篇.md
+++ b/webpack/进阶篇.md
@@ -2,8 +2,8 @@
 
 ## 静态资源内联
 - css样式文件。
-  - 直接style-loader打入到head里，「减少http请求」。
-  - 针对chunk的css代码，html-inline-css-webpack-plugin，打包好的css代码插入到head里。
+  - 直接`style-loader`打入到head里，「减少http请求」。
+  - 针对chunk的css代码，`html-inline-css-webpack-plugin`将打包好的css代码插入到head里。
 - meta等。raw-loader。
 
 ## source map
@@ -16,8 +16,8 @@
 ## 页面共用资源分离
 - splitChunksPlugin。对公共脚本进行分离。并且可以指定范围，例如：该资源的最小共用次数minChunks，包最小大小minSize等。
 
-## tree shaking
-- 概念：一个模块可能会有多个方法，主要某个被用到了，整个模块都会被打到「bundle」里去。tree shaking就是将用到的方法打入bundle，没用到的在「uglify」阶段檫除掉。
+## tree shaking - （`prod模式`下自动打开）
+- 概念：一个模块可能会有多个方法，主要某个被用到了，整个模块都会被打到「bundle」里去。`tree shaking`就是将用到的方法打入bundle，没用到的在「uglify」阶段檫除掉。
 - 要求：必须是ES6语法。CJS方法（模块导入）不支持。
 - 擦除只擦除函数和变量，不擦除「类」。
 
@@ -29,25 +29,25 @@
 - 原理：
   - ES6模块静态导入。对导入的模块进行「静态分析」。
   - 分析过程中，对没有到达的代码进行标记。
-  - 在uglify阶段删除无用代码。
+  - 在`uglify阶段`删除无用代码。
 
 - uglify原理：（2.x需要转成es5才能进行压缩）
   - 将代码解析成AST。
   - 转化为一颗更小的AST。
   - 在输出代码。
 
-## scope Hoisting - 作用域提升
+## scope Hoisting -（`prod模式`下自动打开）
 - webpack模块机制
   - webpack打包模块时，会将模块带上一层包裹。
   - import会被转化成_webpack_require，返回module.exports。
   - 最后打包出来是一个匿名函数，通过「__webpack_require__(0)」启动。
   ![](/image/ada29fefcc7e39a5f7a33bfa88cfcfc.png)
 
-- 存在问题：
-  - 大量函数闭包包裹代码，导致代码体积增大（模块越多越明显）。
-  - 运行代码时创建函数作用域变多，内存开销越大。
+- 存在问题： - 减少作用域
+  - 模块打包时，模块依赖时会`进行函数包裹`，如果依赖深的话会导致函数包裹明显
+  - 函数闭包对依赖进行包裹，运行代码时创建`函数作用域`变多，内存开销越大。
 
-- 原理：将所有模块的代码按照引用顺序放在一个函数作用域里，并会适当重命名一些变量解决冲突。
+- 原理：将所有模块的代码`按照引用顺序放在一个函数作用域`里，并会适当重命名一些变量解决冲突。
   - 会把需要导入的文件放到导入者的顶部，例如：如果b依赖a，将a放在b的前面。
   - 可以减少「函数声明」和「内存开销」。
   - 必须是es6语法，CJS语法无效。
