update: storage beat practice, fiber

--- a/浏览器/跨页面通信.md
+++ b/浏览器/跨页面通信.md
@@ -23,6 +23,10 @@
 
 ## 3. LocalStorage & StorageEvent
 - 当storage数据变化时，会触发window的StorageEvent事件，所以在所有需要监听的页面加上window事件监听即可。
+- 类似于最佳实践：
+  - 命名：项目名 + 当前环境 + 项目版本 + 缓存key
+  - 定时：存储`Date.now()` + `expire: 时间`
+  - 加密：加密算法进行加密类似`crypto.js`
 ```JS
 window.addEventListener('storage', function (e) {
     if (e.key === 'ctc-msg') {
