--- a/JS/编译器和解释器.md
+++ b/JS/编译器和解释器.md
@@ -6,16 +6,36 @@
 ## 2. v8如何执行一段JS代码
   - 会对当前下的全局代码，或者是一个函数进行编译。
 ![](https://static001.geekbang.org/resource/image/1a/ae/1af282bdc4036096c03074da53eb84ae.png)
-1. 生成抽象语法树（AST）和执行上下文
-  - 关于AST
-    - 词法分析
-    - 语法分析（解析）- 变量提升，执行上下文生成
+1. 词法分析：接收原始代码，并分割为一个个的`token`。如果遇到分词错误，就会导致`Early error`。
+2. 语法分析，将之前接收到的token，转换成一种抽象的表示`AST`。
+  - 变量提升，执行上下文生成）
 
-2. 生成字节码
+## 执行
+3. 生成字节码
   - 介于AST和机器码之间的语言，需要通过解释器转化为机器码才能执行。
   - 解释执行字节码
   - JS 字节码 机器码对比
   ![](https://static001.geekbang.org/resource/image/87/ff/87d1ab147d1dc4b78488e2443d58a3ff.png)
 
-3. 执行代码
+4. 执行代码
   - 执行中如果发现一段代码被执行了多次「热点代码」。就会将他转化为机器码。「JIT」
+
+## 转换为一种新的语言或者不同版本的JS
+3. 转换，将AST做一些修改，转换成一棵新的AST。
+  - 深度遍历，处理所有的节点。
+  - 改变内部结构时，采用`visitor mode`，允许再对象结构内对元素进行操作，而不需要将逻辑都集成到元素中。
+
+4. 代码生成。
+
+```JS
+function compiler(input) {
+  var tokens = tokenizer(input); // input  => tokenizer   => tokens
+  var ast    = parser(tokens); // tokens => parser      => ast
+  var newAst = transformer(ast); // ast    => transformer => newAst
+  var output = codeGenerator(newAst); // newAst => generator   => output
+
+  // 然后返回输出!
+  return output;
+}
+
+```
