--- a/JS/正则.md
+++ b/JS/正则.md
@@ -83,4 +83,69 @@
   alert( match[2] ); // c
   ```
 
-- ##
+- ## matchAll 返回一个可迭代对象
+
+- ## 命名组 ?<name>
+  - 可以通过括号，立即加上`?<name>`，设置group，
+  ```JS
+  let str = `<group1 group2>`
+  let arr = str.match(/<(?<g0>(?<g1>\w+)\s(?<g2>\w+))>/)
+  let groups = arr.groups
+  console.log(arr[0]) //<group1 group2>
+  console.log(groups.g0) //group1 group2
+  ```
+
+- ## 替换捕获组
+  - `str.replace(regexp, replacement)` 用 `replacement` 替换 `str` 中匹配 `regexp` 的所有捕获组。这使用 $n 来完成，其中 n 是组号
+  ```JS 
+  let str = "John Bull";
+  let regexp = /(\w+) (\w+)/;
+  alert( str.replace(regexp, '$2, $1') ); // Bull, John
+  ```
+
+- ## 反向引用
+  ```JS
+  let str = `He said: "She's the one!".`;
+
+  let regexp = /(['"])(.*?)\1/g;
+  // let regexp = /(?<g1>['"])(.*?)\k<g1>/g;
+
+  alert( str.match(regexp) ); // "She's the one!"
+
+  // 这里的 \1 会找到第一个 group ，也就是 (['"]) 匹配到的内容，也就是 " ，然后这个正则就相当于变成了 /(['"])(.*?)"/g
+  ```
+
+- ## 断言
+  - 前瞻断言
+    - x(?=y) 仅当 x 后面是 y 的时候匹配
+    - x(?!y) 仅当 x 后面不是 y 的时候匹配
+    ```JS
+    let str = "1 turkey costs 30€";
+
+    alert( str.match(/\d+(?=€)/) ); // 30 （正确地跳过了单个的数字 1）
+    ```
+  - 后瞻断言
+    - `(?<=y)x`, 匹配 x, 仅在前面是 y 的情况。
+    - `(?<!y)x`, 匹配 x, 仅在前面不是 y 的情况
+
+  - 断言仅仅是作为占位，不会匹配字符，比如 `/q(?=u)i/` 匹配 'quit' 是会失败的，因为 `/q(?=u)/` 「只能匹配到 q 而不是 qu」
+    - 如果我们想要捕捉整个环视表达式或其中的一部分，需要将其包裹在另加的括号里
+    ```JS
+    let str = "1 turkey costs 30€";
+    let reg = /\d+(?=(€|kr))/
+
+    // 30, €
+    ```
+
+- ## 相关方法
+
+  - 字符串
+    - `str.match(regexp)`  方法在字符串 str 中找到匹配 egexp 的字符。
+    -` str.matchAll(regexp)`  它主要用来搜索所有组的所有匹配项
+    - `str.split(regexp|substr, limit)`  使用正则表达式（或子字符串）作为分隔符来分割字符串。
+    - `str.search(regexp)`  返回第一个匹配项的位置，如果未找到，则返回 -1
+    - `str.replace(str|regexp, str|func)` 用于搜索和替换的通用方法
+  - 正则
+    - `regexp.exec(str)`  方法返回字符串 str 中的 regexp 匹配项。
+    - `regexp.test(str)`  查找匹配项，然后返回 true/false  表示是否存在。
+
