新增：js的面向对象

--- a/JS/对象.md
+++ b/JS/对象.md
@@ -32,3 +32,60 @@
 ## 虽然JS的对象系统设计很特别，但JS也提供了完全运行时的对象系统，使得它可以模仿多数面向对象编程方式。
 
 ## JavaScript 语言标准也已经明确说明，JavaScript 是一门面向对象的语言
+
+# 面向对象不等于面向类
+
+- JS之初，Brendan透露过，最初的构想是一个拥有基于原型的面向对象能力的scheme语言。
+- JS之前，原型系统久更多与高动态性语言配合，多数基于原型的语言提倡运行时的原型修改。
+- 无论是基于类或者基于原型，都能够满足基本的复用和抽象需求
+
+## 基于类
+- 编程提倡使用一个关注分类和类之间关系开发模型。总是先有类，再从类去实例化一个对象。类与类之间又可能会形成继承、组合等关系。
+- 类又往往与语言的类型系统整合，形成一定编译时的能力。
+
+## 基于原型
+- 更为提倡程序员去关注一系列对象实例的行为，而后才去关心如何将这些对象，划分到最近的使用方式相似的原型对象，而不是将它们分成类。
+- 基于原型的面向对象系统通过“复制”的方式来创建新对象。
+
+- 原型系统的复制操作，有两种实现思路
+  - 一个是并不真的去复制一个原型对象，而是使得新对象持有一个原型的引用；（JS）
+  - 另一个是切实地复制对象，从此两个对象再无关联。
+
+
+## JS的原型系统
+- 如果所有对象都有私有字段 [[prototype]]，就是对象的原型；
+- 读一个属性，如果对象本身没有，则会继续访问对象的原型，直到原型为空或者找到为止。
+
+- ES6 以来，JavaScript 提供了一系列内置函数，以便更为直接地访问操纵原型。「可以完全抛开类的思维，利用原型来实现抽象和复用。」
+  - Object.create 根据指定的原型创建新对象，原型可以是 null；
+  - Object.getPrototypeOf 获得一个对象的原型；
+  - Object.setPrototypeOf 设置一个对象的原型。
+
+- 在更早的版本中，程序员只能通过 Java 风格的类接口来操纵原型运行时，例如：`new, prototype`
+
+## 早期的类和原型
+- 在早期版本的 JavaScript 中，“类”的定义是一个私有属性 [[class]]。语言标准为内置类型诸如 Number、String、Date 等指定了 [[class]] 属性，以表示它们的类。语言使用者唯一可以访问 [[class]] 属性的方式是 Object.prototype.toString。
+
+- 所以，在ES3 和之前的版本，JS 中类的概念是相当弱的，它仅仅是运行时的一个字符串属性。
+
+- ES5 开始，[[class]] 私有属性被 Symbol.toStringTag 代替。Object.prototype.toString 的意义从命名上不再跟 class 相关。（可以重写[Symbol.toStringTag]的方法）
+
+### 关于类中的new
+
+- 做了什么事：
+  - new 运算接受一个构造器和一组调用参数
+  - 以构造器的 prototype 属性（注意与私有字段 [[prototype]] 的区分）为原型，创建新对象
+  - 将 this 和调用参数传给构造器，执行；
+  - 如果构造器返回的是对象，则返回，否则返回第一步创建的对象。
+
+- 试图让函数对象在语法上和类变得类似，本质上new提供了两种方式：
+  - 在构造器中添加属性。例如：直接在构造器中修改this，给this添加属性
+  - 二是在构造器的 prototype 属性上添加属性。修改构造器prototype属性指向的对象。
+
+### ES6中的类
+- 新特性 class 可以让 new 和 function 的搭配退休啦。
+- 在标准中删除了所有 [[class]] 相关的私有属性描述，类的概念正式从属性升级成语言的基础设施。
+
+- 除了getter/setter 和 method外，还提供了继承能力。
+
+
