--- a/JS/对象.md
+++ b/JS/对象.md
@@ -88,4 +88,45 @@
 
 - 除了getter/setter 和 method外，还提供了继承能力。
 
+# 对象分类
+
+## 宿主对象：由 JavaScript 宿主环境提供的对象。
+
+## 内置对象：由 JavaScript 语言提供的对象:
+
+### 固有对象（Intrinsic Objects ）：
+- 由标准规定，随着 JavaScript 运行时创建而自动创建的对象实例。通常扮演者类似基础库的角色。
+
+### 原生对象（Native Objects）：
+- 可以由用户通过 Array、RegExp 等内置构造器或者特殊语法创建的对象, 我们可以用 new 运算创建新的对象。
+- ![](/image/67da86dd816514b485a0b2f7dcb72dd.png)
+- 几乎所有这些构造器的能力都是无法用纯 JavaScript 代码实现的，它们也无法用 class/extend 语法来继承，由于这些构造器创建的对象多数使用了私有字段。所有这些原生对象都是为了特定能力或者性能，而设计出来的“特权对象”。
+```JS
+Error: [[ErrorData]]
+Boolean: [[BooleanData]]
+```
+### 普通对象（Ordinary Objects）：
+- 由 {} 语法、Object 构造器或者 class 关键字定义类创建的对象，它能够被原型继承。
+
+## 使用对象模拟函数与构造器
+- 函数对象的定义是：具有 [[call]] 私有字段的对象
+- 构造器对象的定义是：具有私有字段 [[construct]] 的对象。
+
+- JS用对象模拟函数的设计替代了一般语言的函数，只要具有[[call]]私有字段，都可以被JS函数调用语法支持。
+  - PS：[call]] 私有字段必须是一个引擎中定义的函数，需要接受 this 值和调用参数，并且会产生域的切换
+
+- 用 function 关键字创建的函数必定同时是函数和构造器。不过，它们表现出来的行为效果却并不相同。比如：
+  - 内置对象 Date 在作为构造器调用时产生新的对象，作为函数时，则产生字符串；
+  - 基本类型（String、Number、Boolean），它们的构造器被当作函数调用，则产生类型转换的效果
+
+- ES6的箭头函数，创建的仅仅是函数，无法被作为构造器使用。
+
+## 一些特殊行为的对象
+- Array：Array 的 length 属性根据最大的下标自动发生变化。
+- Object.prototype：作为所有正常对象的默认原型，不能再给它设置原型了。
+- String：为了支持下标运算，String 的正整数属性访问会去字符串里查找。
+- Arguments：arguments 的非负整数型下标属性跟对应的变量联动。
+- 模块的 namespace 对象：特殊的地方非常多，跟一般对象完全不一样，尽量只用于 import 吧。
+- 类型数组和数组缓冲区：跟内存块相关联，下标运算比较特殊。
+- bind 后的 function：跟原来的函数相关联。
 
