--- a/JS/类型.md
+++ b/JS/类型.md
@@ -110,3 +110,11 @@ console.log(symbolObject.constructor == Symbol); //true
 
 - 在 ES6 之后，还允许对象通过显式指定 @@toPrimitive Symbol 来覆盖原有的行为。
 
+### PS: 除了这七种语言类型，还有一些语言的实现者更关心的规范类型。
+- List 和 Record： 用于描述函数传参过程。
+- Set：主要用于解释字符集等。
+- Completion Record：用于描述异常、跳出等语句执行过程。
+- Reference：用于描述对象属性访问、delete 等。
+- Property Descriptor：用于描述对象的属性。
+- Lexical Environment 和 Environment Record：用于描述变量和作用域。
+- Data Block：用于描述二进制数据。
