--- a/JS/语法.md
+++ b/JS/语法.md
@@ -12,3 +12,41 @@
 - 以括号开头的语句。```(function(){})();(function)```
 - 以数组开头的语句.```var a = []; [1,23,4]...```
 - 以正则表达式开头的语句.``` var a = 1; /a/g...  ```
+
+# 脚本与模块
+![](/image/3f46c80064a8b0019b1cb81b7fd21ef.jpg)
+## 是什么：
+- 来源：脚本是可以由浏览器或者 node 环境引入执行的，而模块只能由 JavaScript 代码用 import 引入执行。
+- 概念：我们可以认为脚本具有主动性的 JavaScript 代码段，是控制宿主完成一定任务的代码；而模块是被动性的 JavaScript 代码段，是等待被调用的库。
+- 现代浏览器可以用 script 引入模块或者脚本，如果要引入模块，需要给script加上 `type=“module”`
+
+## import声明
+-  import 一个模块，只是保证了这个模块代码被执行，引用它的模块是无法获得它的任何信息的。不用from的情况下
+- 带 from 的 import 意思是引入模块中的一部分信息，可以把它们变成本地的变量。同时，「from，as的变量仍然受到原来模块的控制，仍然与原来的变量是同一个。」
+
+## export声明
+- export 可以加在任何声明性质的语句之前。例如：var, function, class, let。。。
+- export default + 表达式。「这里导出的是值，不是引用」
+
+## JavaScript 引擎除了执行脚本和模块之外，还可以执行函数。而函数体跟脚本和模块有一定的相似之处
+## 函数体
+
+- 执行函数的行为通常是在 JavaScript 代码执行时，注册宿主环境的某些事件触发的，而执行的过程，就是执行函数体
+- 函数体其实也是一个语句的列表。跟脚本和模块比起来，函数体中的语句列表中`多了 return 语句可以用`。
+
+## JS语法的全局机制
+
+- 预处理：预处理过程将会提前处理 var、函数声明、class、const 和 let 这些语句，以确定其中变量的意义。
+  - 预处理声明，执行时赋值
+  - var 除了脚本和函数体都会穿透，创建一个函数作用域。
+
+  - function 声明
+    - 在有if语句中，在预处理阶段，仍然会产生变量并作用域提升，但不再被提前赋值：
+  - class 声明：
+    - class 声明也是会被预处理的，它会在作用域中创建变量，并且要求访问它时抛出错误。
+  - class 的声明作用不会穿透 if 等语句结构，所以只有写在全局环境才会有声明作用
+
+  - `按照现代语言设计的评价标准，及早抛错是好事`。class 设计比 function 和 var 更符合直觉，而且在遇到一些比较奇怪的用法时，倾向于抛出错误。
+
+- 指令序言机制：
+  - 最早是为了 use strict 设计的，它规定了一种给 JavaScript 代码添加元信息的方式。
