--- a/JS/语法.md
+++ b/JS/语法.md
@@ -50,3 +50,70 @@
 
 - 指令序言机制：
   - 最早是为了 use strict 设计的，它规定了一种给 JavaScript 代码添加元信息的方式。
+
+# JS语句
+- JavaScript 标准中，把语句分成了两种：声明和普通语句。
+- 声明型语句跟普通语句最大区别就是声明型语句响应预处理过程，普通语句只有执行过程。
+
+## 普通语句
+- 语句块。让我们可以把多行语句视为同一行语句，这样，if、for 等语句定义起来就比较简单了。
+- 语句块会产生作用域.例如：let 的定义
+```Js
+{
+  var x, y;
+  x = 10;
+  y = 20;
+}
+```
+- 空语句
+  - 空语句就是一个独立的分号。主要是语言设计完备性的角度考虑，允许插入多个分号而不抛出错误。
+
+- if 语句
+  - switch 语句，建议用if...else 取代
+
+- 循环语句
+  - for
+  - for in 循环。for in 循环枚举对象的属性，这里体现了属性的 enumerable 特征。
+  - for of 循环。背后的机制是 iterator 机制。
+    ```JS
+      let o = {
+        [Symbol.iterator]:() => ({
+            _value: 0,
+            next(){
+                if(this._value == 10)
+                    return {
+                        done: true
+                    }
+                else return {
+                    value: this._value++,
+                    done: false
+                };
+            }
+        })
+    }
+    for(let e of o)
+        console.log(e);
+    ```
+    - 一般用 generator function 定义iterator。
+
+- return 
+  - 终止函数的执行，并且指定函数的返回值
+
+- break 语句和 continue 语句。属于控制型语句
+
+- with，把对象的属性在它内部的作用域内变成变量。
+```JS
+let o = {a:1, b:2}
+with(o){
+    console.log(a, b);
+}
+```
+- try 语句和 throw 语句
+- debugger，调试器在此断点。
+
+## 声明型语句
+- var ，
+- let，const，有暂时性死区，所以还是存在预处理机制，执行到 const 语句前，我们的 JavaScript 引擎就已经知道后面的代码将会声明变量 a，从而不允许我们访问外层作用域中的 a。
+- class。
+- 函数声明。
+  - 带 * 的函数：generator。生成器函数可以理解为返回一个序列的函数，它的底层是 iterator 机制。
