add: 表达式语句

--- a/JS/语法.md
+++ b/JS/语法.md
@@ -117,3 +117,57 @@ with(o){
 - class。
 - 函数声明。
   - 带 * 的函数：generator。生成器函数可以理解为返回一个序列的函数，它的底层是 iterator 机制。
+
+# 表达式语句
+- 语句部分，其实最终产生执行效果的语句不多。真正能干活的就只有表达式语句，其它语句的作用都是产生各种结构，来控制表达式语句执行，或者改变表达式语句的意义。
+
+- 定义：实际上就是一个表达式，由运算符链接变量或者直接量（右边）构成。
+
+## 分类：
+- PrimaryExpression 主要表达式：
+  - 它是表达式的最小单位，它所涉及的语法结构也是优先级最高的。
+  - 其中包含了各种直接量，直接量就是直接用某种语法写出来的具有特定类型的值。例如：123，hello world。
+  - 除此之外，JavaScript 还能够直接量的形式定义对象，针对函数、类、数组、正则表达式等特殊对象类型。
+  ```JS
+  ({});
+  (function(){});
+  (class{ });
+  [];
+  /abc/g;
+  ```
+  - 任何表达式加上圆括号，都被认为是 Primary Expression。例如：（a + b）
+
+- MemberExpression 成员表达式
+  - 通常是用于访问对象成员的。
+    ```JS
+    a.b;
+    a["b"];
+    new.target; // 用于判断函数是否被new调用
+    super.b;
+    ```
+  - 以下也算是Member expression
+    ```js
+    f`a${b}c`; // 表示把模板各个部分算好后传递给一个函数
+
+    new Cls(); // 带参数列表的 new 运算，注意，不带参数列表的 new 运算优先级更低，不属于 Member Expression。
+    ```
+- NewExpression NEW 表达式
+  - Member Expression 加上 new 就是 New Expression
+  
+- CallExpression 函数调用表达式
+  - Member Expression 还能构成 Call Expression。它的基本形式是 Member Expression 后加一个括号里的参数列表
+  - 或者我们可以用上 super 关键字代替 Member Expression。
+  - 我们可以理解为，Member Expression 中的某一子结构具有函数调用，那么整个表达式就成为了一个 Call Expression。
+
+- LeftHandSideExpression 左值表达式
+  - New Expression 和 Call Expression 统称 LeftHandSideExpression，左值表达式。
+  - 最经典的用法是用于构成赋值表达式， 凡是需要“可以被修改的变量”的位置，都能见到它的身影。
+
+- AssignmentExpression 赋值表达式
+  - a = b
+  - a = b = c = d
+  - a += b;
+- Expression 表达式
+  - 在 JavaScript 中，表达式就是用逗号运算符连接的赋值表达式，我们可以把逗号可以理解为一种小型的分号。
+  - a = b, b = 1, null;
+
