add:条件表达式

--- a/JS/语法.md
+++ b/JS/语法.md
@@ -153,7 +153,7 @@ with(o){
     ```
 - NewExpression NEW 表达式
   - Member Expression 加上 new 就是 New Expression
-  
+
 - CallExpression 函数调用表达式
   - Member Expression 还能构成 Call Expression。它的基本形式是 Member Expression 后加一个括号里的参数列表
   - 或者我们可以用上 super 关键字代替 Member Expression。
@@ -170,4 +170,67 @@ with(o){
 - Expression 表达式
   - 在 JavaScript 中，表达式就是用逗号运算符连接的赋值表达式，我们可以把逗号可以理解为一种小型的分号。
   - a = b, b = 1, null;
+
+# 条件表达式（右值表达式）
+
+-  JavaScript 标准中，规定了在等号右边表达式叫做条件表达式。
+- JavaScript 标准也规定了左值表达式同时都是条件表达式（也就是右值表达式），此外，左值表达式也可以通过跟一定的运算符组合，逐级构成更复杂的结构，直到成为右值表达式。
+
+## 分类
+- 更新表达式 UpdateExpression。包括：前后自增自减++，--
+- 一元运算表达式 UnaryExpression
+- 乘方表达式 ExponentiationExpression
+  - ** 运算是右结合的，这跟其它正常的运算符（也就是左结合运算符）都不一样。
+  - -2 这样的一元运算表达式，是不可以放入乘方表达式的，如果需要表达类似的逻辑，必须加括号。
+  ```JS
+  ++i ** 30
+  2 ** 30 // 正确
+  -2 ** 30 // 报错
+  ```
+- 乘法表达式 MultiplicativeExpression
+  ```JS
+  // 乘、除和取余
+  *
+  /
+  %
+  ```
+- 加法表达式 AdditiveExpression： + -
+- 移位表达式 ShiftExpression
+  ```js
+  // 左移 n 位相当于乘以 2 的 n 次方，右移 n 位相当于除以 2 取整 n 次。
+  << 向左移位
+  >> 向右移位
+  >>> 无符号向右移位
+  ```
+  - 在 JavaScript 中，二进制操作整数并不能提高性能，移位运算这里也仅仅作为一种数学运算存在，这些运算存在的意义也仅仅是照顾 C 系语言用户的习惯了。
+- 关系表达式 RelationalExpression
+  - 大于、小于、大于等于、小于等于等运算符号连接，统称为关系运算。
+- 相等表达式 EqualityExpression：==,!=,===,!==
+  -  JavaScript 中著名的设计失误，那就是 == 的行为。== 规则：
+    - undefined 与 null 相等；
+    - 字符串和 bool 都转为数字再比较；
+    - 对象转换成 primitive 类型再比较。
+
+    - PS：不太符合常理的规则
+      - 一个是即使字符串与 boolean 比较，也都要转换成数字；
+      - 二是对象如果转换成了 primitive 类型跟等号另一边类型恰好相同，则不需要转换成数字。
+- 位运算表达式
+  - 按位与表达式 BitwiseANDExpression，&，把操作数视为二进制整数，然后把两个操作数按位做与运算。
+  - 按位异或表达式 BitwiseANDExpression，^，把操作数视为二进制整数，把两个操作数按位做异或运算。异或两位相同时得 0，两位不同时得 1
+    - 小技巧：两次异或运算相当于取消。可用于交换值
+    ```JS
+    let a = 102, b = 324;
+    
+    a = a ^ b;
+    b = a ^ b;
+    a = a ^ b;
+    
+    console.log(a, b);
+    ```
+  - 按位或表达式 BitwiseORExpression。|
+- 逻辑与表达式和逻辑或表达式：|| &&
+- 条件表达式 ConditionalExpression。condition ? branch1 : branch2
+
+
+
 
