add: 页面元信息标签；css语法

--- a/html/标签.md
+++ b/html/标签.md
@@ -28,5 +28,29 @@
 </body>
   ```
 
-# 集合
+## 集合
 ![](/image/1834f055c3b1b134fc114efd7e05e61.png)
+
+# 元信息类标签
+- 相比语义化标签，元信息标签多数情况下是给浏览器、搜索引擎等机器阅读的，有时候这些信息会在页面之外显示给用户。
+
+## head 标签
+- head 标签规定了自身必须是 html 标签中的第一个标签，它的内容必须包含一个 title。（如果文档是iframe，可以允许不包括 title）
+
+## title 标签
+- 相比于 h1 ,title 更多是完整地概括整个网页地内容。
+
+## meta 标签
+- 是什么：一组键值对，一种通用的元信息表示标签。name 表示元信息的名，content 则用于表示元信息的值。
+- meta 标签还有一些变体，主要用于简化书写方式或者声明自动化行为。
+  ## charset="UTF-8"
+  - 描述了 HTML 文档自身的编码形式。浏览器读到这个标签之前，处理的所有字符都是 ASCII 字符。（ASCII 字符是 UTF-8 和绝大多数字符编码的子集）
+
+  ## http-equiv 
+  - 表示执行一个命令，可不需要name属性。例如：refresh 刷新；set-cookie 模拟 http 头 set-cookie，设置 cookie；
+
+  ## viewport
+  - 移动端开发的事实标准
+  ```HTML
+  <meta name="viewport" content="width=500, initial-scale=1">
+  ```
