--- a/性能优化/图片处理.md
+++ b/性能优化/图片处理.md
@@ -1,3 +1,28 @@
+# 图片分类
+
+## 图片处理方式分类
+
+- 无压缩。不压缩处理，BMP（bitmap） 格式。
+- 无损压缩。「对」图片所有数据进行压缩编码，保证图片质量同时降低图片尺寸。例如：PNG
+- 有损压缩。「不会对」图片所有数据进行编码压缩，主要处理人眼无法识别的图片细节。可以在同等图片质量的情况下降低图片的尺寸。例如：jpg
+
+## 图片格式分类
+- GIF。
+  - 优点：支持透明和动画
+  - gif只存储8位索引（也就是最多能表达2^8=256种颜色）。色彩少。
+- JPG。
+  - 优：采用直接色，所以jpg非常适合色彩丰富图片、渐变色。并且，「有损压缩移除肉眼无法识别的图片细节后，将图片的尺寸大幅度地减小。」
+  - 缺：但jpg不适合icon、logo。
+- png-8
+  - 优点：无损压缩，基于8位索引色的位图格式。png-8相比gif对透明的支持更好，适合做gif的替代品。
+  - 缺点：没有动画。
+- png-24
+  - 优点：无损直接色。高品质。支持透明。
+  - 缺点：文件大小至少是jpg的5倍
+- webp：
+  - 优点：与png、jpg相比，相同的视觉体验下，WebP图像的尺寸缩小了大约30％。支持有损压缩、无损压缩、透明和动画。
+  - 缺点：Google开发，兼容性不好，除了移动端和chrome。
+
 # 多图下的并发处理
 
 - http1.1下的图片并发，没有多路复用，同一域名下只能同时请求6个，设置优先加载的图片。通过先设置的div计算到图片是否在视口区域内。
