--- a/算法/算法.md
+++ b/算法/算法.md
@@ -57,3 +57,15 @@
 - 递推，记忆化（建立状态表）自底向上递推
 - 解决
 
+
+# trie 树 - 单词查找树，键树
+- 通常用于统计和排序大量的字符串。词频统计，搜索等。
+- 利用字符串公共前缀减低查询时间开销。
+## 优点：
+  - 大限度的减少无关紧要的字符串的比较。
+  - 查询效率比哈希表高
+
+## 基本性质
+- 节点本身不存完整单词
+- 根节点出发，连接起来就成为对应的字符串。
+- 每个节点的所有子节点代表的字符都不相同。
