--- a/算法/算法.md
+++ b/算法/算法.md
@@ -69,3 +69,38 @@
 - 节点本身不存完整单词
 - 根节点出发，连接起来就成为对应的字符串。
 - 每个节点的所有子节点代表的字符都不相同。
+
+# 位运算
+![](/image/4691ab28d21a9878ded6675736ddda6.png)
+
+## 异或的一些特点
+```JS
+x ^ 0 = x
+x ^ 1s = ~x // 1s = ~0
+x ^ (-x) = 1s
+x ^ x = 0
+c = a ^ b => a ^ c = b, b ^ c = a // 交换两个数
+a ^ b ^ c = a ^ (b^c) = (a^c)^c
+```
+
+## 一些常规操作
+- 需要对数的某个二进制位进行置1、清0、移位
+```JS
+x & (~0 << n) // 1. 将x最右边的N位清0
+(x >> n) & 1 // 2. 获取x的第N位值（0或者1）
+x & (1 << (n - 1))// 3. 获取x第N位的幂值
+// ...
+```
+- 实战要点
+```JS
+// 1. 判断奇偶，判断最后一位是不是0，0则是偶数
+  x & 1 == 1
+  x & 0 == 0
+// 2. (/ 2)，最后一位清空并移一位
+  x >> 1
+// 3. 清0最低位的1
+  x = x & (x - 1)
+// 4. 得到最低位的1
+  x & -x
+// 5. x & ~x => 0
+```
