add: Something about JS object

--- a/JS/对象.md
+++ b/JS/对象.md
@@ -81,6 +81,27 @@
 - 试图让函数对象在语法上和类变得类似，本质上new提供了两种方式：
   - 在构造器中添加属性。例如：直接在构造器中修改this，给this添加属性
   - 二是在构造器的 prototype 属性上添加属性。修改构造器prototype属性指向的对象。
+    ```js
+    // 没有 Object.create、Object.setPrototypeOf 的早期版本中，new 运算是唯一一个可以指定 [[prototype]] 的方法，还有多数浏览器不支持的 __proto__
+    function c1(){
+      this.p1 = 1;
+      this.p2 = function(){
+          console.log(this.p1);
+      }
+    } 
+    var o1 = new c1;
+    o1.p2();
+    
+    function c2(){
+    }
+    c2.prototype.p1 = 1;
+    c2.prototype.p2 = function(){
+        console.log(this.p1);
+    }
+    
+    var o2 = new c2;
+    o2.p2();
+    ```
 
 ### ES6中的类
 - 新特性 class 可以让 new 和 function 的搭配退休啦。
@@ -108,7 +129,7 @@ Boolean: [[BooleanData]]
 ### 普通对象（Ordinary Objects）：
 - 由 {} 语法、Object 构造器或者 class 关键字定义类创建的对象，它能够被原型继承。
 
-## 使用对象模拟函数与构造器
+## 使用对象模拟函数与构造器 - 函数对象与构造器对象
 - 函数对象的定义是：具有 [[call]] 私有字段的对象
 - 构造器对象的定义是：具有私有字段 [[construct]] 的对象。
 
