add: webpack some plugin loader

--- a/node/开发.md
+++ b/node/开发.md
@@ -17,3 +17,9 @@
 - 相同模板，通过SSR框架的`renderToString`方法，将组件渲染成字符串。
 - 数据部分。
   - 注重职责分离。对于环境区分开。
+
+## 渐进式
+- 将能复用的逻辑抽离，渐进式化
+
+## serverless
+- 将工作空间的代码上传到云端，云端将`业务`和`服务器`的代码的文本下载到服务器，并在服务器运行，就形成了所需要的业务逻辑。
