--- a/打包器/webpack/基础篇.md
+++ b/打包器/webpack/基础篇.md
@@ -16,18 +16,44 @@
 
 ## loader
 - 处理不能解析的文件类型，css
-- css-loader。加载CSS，转换为commonJS对象。
+- css-loader。加载CSS，转换为`commonJS`对象。
 - style-loader。通过`<style>`标签插入到head里
 - raw-loader。文件内容以字符串形式注入
 - thread-loader。多线程
+- url-loader。同file-loader处理字体图片功能之余，还能设置`较小资源自动base64`
 
 ## plugin
+![](/image/cbb73aad9937e05150a88f39afeddee.png)
 - 增强webpack的功能，用于bundle文件的优化，资源的管理，环境注入。
-- MiniCssExtractPlugin，将css从bundle文件里提取处理成一个css文件。
+### JS
 - uglifyjsWebpackPlugin，压缩JS
+
+### css
+- MiniCssExtractPlugin，将css从`bundle文件里提取处理成一个css文件`。
+- optimize-css-assets-webpack-plugin，压缩CSS文件，`清除空格分号`（同时需要安装cssnano预处理器）
+
+### HTML
+- html-webpack-plugin，清除html里的`空格换行`。（必用）
 - ZipWebpackPlugin，打包资源生成Zip包
 
+## 文件监听 - 文件发生变化时，自动构建
+- 轮询判断文件最后编辑时间是否变化；
+- 当文件发生变化时，不会立即告诉监听者，先缓存起来，等aggregateTimeout完成后再更新
+```json
+"build": "webpack --watch"
+```
+```JS
+module.exports = {
+  watch: true,
+  watchOptions: {
+    ignored: /node_modules/,
+    aggregateTimeout: 300, // 监听到文件变化后，默认等300MS后才去执行
+    poll：1000 // 判断文件是否有发生变化，是通过不断轮询去询问文件有没有变化，默认每秒询问1000次 
+  }
+}
+```
 ## 热更新原理
+- 相比于文件监听热更新是存储于内存的，效率更高
 - 概念：
   - webpack compile：将JS编译成bundle
   - Bundle server：提供文件在浏览器的访问
@@ -41,8 +67,8 @@
 ## 文件指纹策略 - 版本管理，浏览器缓存。
 
 - hash：整个项目的构建相关，项目文件有修改则hash会跟着更改。跟着项目的compilation更改。
-  - compilation代表一次新的编译，只要文件改动，就会被重新创建。
-  - Compiler代表webpack从启动到关闭的生命周期。
-- chunkHash：和webpack打包的chunk（模块）有关，「不同的entry」会生成不同的chunkHash值。（JS文件）
+  - `compilation` 代表一次新的编译，只要文件改动，就会被重新创建。
+  - `Compiler` 代表webpack从启动到关闭的生命周期。
+- chunkHash：和webpack打包的不同 `entry` 有关，「不同的entry」会生成不同的chunkHash值。（JS文件）
 - contentHash：根据文件内容变更。（css文件）
 
