--- a/打包器/webpack/进阶篇.md
+++ b/打包器/webpack/进阶篇.md
@@ -1,22 +1,51 @@
-# 进阶用法
+# autoprefixer
+- css 的后处理器（less和sass是打包前进行处理），自动补齐css3前缀。
 
-## 静态资源内联
+# 静态资源内联
+- `raw-loader`。内联HTML，例如：meta
 - css样式文件。
-  - 直接`style-loader`打入到head里，「减少http请求」。
+  - 直接`style-loader`打入到head里。(比较少用到)。
   - 针对chunk的css代码，`html-inline-css-webpack-plugin`将打包好的css代码插入到head里。
 - meta等。raw-loader。
 
-## source map
+# source map
 - 将打包出来的压缩代码，指到源代码的位置。实现：使用「eval」将源代码包裹住。
 - 类型：
   - inline。不生成.map文件。将.map作为DataURL嵌入。
   - cheap。不包含错误堆栈中的「列」信息。
   - module。包含loader的sourceMap。
 
-## 页面共用资源分离
-- splitChunksPlugin。对公共脚本进行分离。并且可以指定范围，例如：该资源的最小共用次数minChunks，包最小大小minSize等。
+# 页面共用资源分离
+- html-webpack-externals-plugin
+  - 分离基础库。
+  ```JS
+    new HtmlWebpackExternalsPlugin({
+      externals: [
+        {
+          module: 'jquery',
+          entry: 'https://code.jquery.com/jquery-3.6.0.min.js',
+          global: 'jQuery'
+        }
+      ]
+    }),
+  ```
+- `splitChunksPlugin`。
+  - 对公共脚本进行分离。并且可以指定范围，例如：该资源的最小共用次数minChunks，包最小大小minSize等。
+  ```JS
+    optimization: {
+      splitChunks: {
+        cacheGroups: {
+          commons: {
+            test: /jquery/,
+            name: 'vendors',
+            chunks: 'all'
+          }
+        }
+      }
+    },
+  ```
 
-## tree shaking - （`prod模式`下自动打开）
+# tree shaking - （`prod模式`下自动打开）
 - 概念：一个模块可能会有多个方法，主要某个被用到了，整个模块都会被打到「bundle」里去。`tree shaking`就是将用到的方法打入bundle，没用到的在「uglify」阶段檫除掉。
 - 要求：必须是ES6语法。CJS方法（模块导入）不支持。
 - 擦除只擦除函数和变量，不擦除「类」。
@@ -36,7 +65,7 @@
   - 转化为一颗更小的AST。
   - 在输出代码。
 
-## scope Hoisting -（`prod模式`下自动打开）
+# scope Hoisting -（`prod模式`下自动打开）
 - webpack模块机制
   - webpack打包模块时，会将模块带上一层包裹。
   - import会被转化成_webpack_require，返回module.exports。
@@ -52,15 +81,15 @@
   - 可以减少「函数声明」和「内存开销」。
   - 必须是es6语法，CJS语法无效。
 
-## 代码分割 - chunks
+# 代码分割 - chunks
 - 适用的场景：
   - 抽离相同的代码到一个共享块。
   - 脚本懒加载，初始下载代码更小。
 - 之后通过ES6动态import「@babel/plugin-syntax-dynamic-import」，导入对应的模块。
 
-## [eslint](./project/eslint.md)
+# [eslint](./project/eslint.md)
 
-## webpack打包工具库
+# webpack打包工具库
 - 特性：
   - 打包了压缩版和非压缩版.
   - 支持AMD / CJS / ESM模块导入。
@@ -79,7 +108,7 @@
 module.exports = require('XXX')
 ```
 
-## webpack 打包SSR
+# webpack 打包SSR
 - 对JS等文件不必使用hash的命名进行缓存。通常一个HTML返回所有的数据，所以减少了请求数量，白屏时间会更快。有利于SEO。
 - 主要实现是将模板最后渲染为一个「字符串」，最后访问路由时返回对应的模板。
 - 存在的问题：
